deploy/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motus
  namespace: motus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: motus
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: motus
    spec:
      containers:
        - name: motus
          image: ghcr.io/gi8lino/motus:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            timeoutSeconds: 2
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 30
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
      restartPolicy: Always
      automountServiceAccountToken: false
